2007-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfo.cs : implemented GetConsoleFallbackUICulture and
	  CultureTypes (it is awful indeed). Fix ComVisibles.
	  implemented InstalledUICulture, as what matches the best I think is
	  the one for BootstrapCultureID.

2007-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfo.cs : another hack, KeyboardLayoutId.

2007-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfo.cs :
	  hacked IetfLanguageTag and GetCultureInfoByIetfLanguageTag().

2007-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfo.cs : Name.
	* PersianCalendar.cs : missing members.
	* NumberFormatInfo.cs HijriCalendar.cs CultureInfo.cs TextInfo.cs
	  HebrewCalendar.cs ThaiBuddhistCalendar.cs GregorianCalendar.cs
	  KoreanCalendar.cs JulianCalendar.cs TaiwanCalendar.cs
	  JapaneseCalendar.cs DaylightTime.cs EastAsianLunisolarCalendar.cs
	  RegionInfo.cs TextElementEnumerator.cs : ComVisible cleanup.

2007-07-09  Atsushi Enomoto  <atsushi@ximian.com>

	* TextInfo.cs : ICloneable.
	* GregorianCalendarTypes.cs CompareOptions.cs CultureTypes.cs
	  CalendarWeekRule.cs UnicodeCategory.cs : [Serializable].
	* ThaiBuddhistCalendar.cs GregorianCalendar.cs KoreanCalendar.cs
	  TaiwanCalendar.cs JapaneseCalendar.cs :
	  GetWeekOfYear() (base could be simply used). Removed unused code.

2007-07-02  Atsushi Enomoto  <atsushi@ximian.com>

	* UmAlQuraCalendar.cs
	  EastAsianLunisolarCalendar.cs
	  ChineseLunisolarCalendar.cs
	  TaiwanLunisolarCalendar.cs
	  JapaneseLunisolarCalendar.cs
	  KoreanLunisolarCalendar.cs : new 2.0 calendars.
	* Calendar.cs
	  HijriCalendar.cs HebrewCalendar.cs ThaiBuddhistCalendar.cs
	  GregorianCalendar.cs KoreanCalendar.cs JulianCalendar.cs
	  TaiwanCalendar.cs JapaneseCalendar.cs PersianCalendar.cs :
	  added GetLeapMonth().
	* CalendricalCalculations.cs : added some lunisolar calendar stuff.
	  mostly stubs.

2007-06-24  Gert Driesen  <drieseng@users.sourceforge.net>
